fixed height and padding on mobile view;

--- a/styles/_about.scss
+++ b/styles/_about.scss
@@ -13,6 +13,7 @@
 
     h2 {
       text-align: center;
+      margin-top: 1rem;
     }
   }
 }
